--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-f
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Правила чата Pro Joomla</title>
+</head>
+<body>
+<ul>
+    <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяем наших убеждений - не место в этом чате</li>
+    <li>Мы доброжелательны друг к другу и новичкам</li>
+    <li>Мы осуждаем воровство программ и их нелицензионное использование</li>
+    <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
+</ul>
+</body>
+</html>
