--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/js/uikit-icons.min.js"></script>
 </head>
 <body>
-<ul>
-    <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяем наших убеждений - не место в этом чате</li>
-    <li>Мы доброжелательны друг к другу и новичкам</li>
-    <li>Мы осуждаем воровство программ и их нелицензионное использование</li>
-    <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
-</ul>
-</body>
+    <div class="uk-container">
+    <ul>
+        <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяем наших убеждений - не место в этом чате</li>
+        <li>Мы доброжелательны друг к другу и новичкам</li>
+        <li>Мы осуждаем воровство программ и их нелицензионное использование</li>
+        <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
+    </ul>
+    </div>
+    </body>
 </html>
