--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="uk-container">
+        <h1>Правила Pro Joomla</h1>
     <ul>
         <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяем наших убеждений - не место в этом чате</li>
         <li>Мы доброжелательны друг к другу и новичкам</li>
