--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <ul>
         <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяем наших убеждений - не место в этом чате</li>
         <li>Мы доброжелательны друг к другу и новичкам</li>
+        <li>Новичкам всячески помогать. На их тему не шутить, не подкалывать, не доказывать свое превосходство и крутизну. Если Вам нечего сказать новичку - не говорите ничего</li>
         <li>Мы осуждаем воровство программ и их нелицензионное использование</li>
         <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
+        <li>В чате запрещено хейтерство. Хейтерство - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают. </li>
     </ul>
     </div>
     </body>
