--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li>Мы осуждаем воровство программ и их нелицензионное использование</li>
         <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
         <li>В чате запрещено хейтерство. Хейтерство - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают. </li>
-    </ul>
+        <li>Запрещены подстрекательство и провокация ссор, свар, ругани, наездов итп. </li>
+        </ul>
     </div>
     </body>
 </html>
