--- a/index.html
+++ b/index.html
@@ -7,24 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Правила чата Pro Joomla</title>
     <!-- UIkit CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/css/uikit.min.css" />
 
-<!-- UIkit JS -->
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/js/uikit.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/js/uikit-icons.min.js"></script>
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.3/dist/js/uikit-icons.min.js"></script>
 </head>
 <body>
     <div class="uk-container">
         <h1>Правила Pro Joomla</h1>
-    <ul>
-        <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяем наших убеждений - не место в этом чате</li>
-        <li>Мы доброжелательны друг к другу и новичкам</li>
-        <li>Новичкам всячески помогать. На их тему не шутить, не подкалывать, не доказывать свое превосходство и крутизну. Если Вам нечего сказать новичку - не говорите ничего</li>
-        <li>Мы осуждаем воровство программ и их нелицензионное использование</li>
-        <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
-        <li>В чате запрещено хейтерство. Хейтерство - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают. </li>
-        <li>Запрещены подстрекательство и провокация ссор, свар, ругани, наездов итп. </li>
+        <ul>
+            <li>1. Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место в этом чате.</li>
+            <li>2. Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
+            <li>3. У нас работают обычные правила вежливости, принятые в обществе. То, что невежливо говорить и делать в публичных местах, запрещено в нашем чате.</li>
+            <li>4. Мы доброжелательны друг к другу и новичкам.</li>
+            <li>5. Новичкам стараемся всячески помогать. На их тему не шутить, не подкалывать, не доказывать свое превосходство и крутизну. Если Вам нечего сказать новичку - не говорите ничего.</li>
+            <li>6. Мы осуждаем воровство программ и их нелицензионное использование. Запрещена публикация линков, связанных с варезом и прочим, что может быть отнесено к нарушению прав разработчиков программ.</li>
+            <li>7. Запрещено хейтерство. Хейтерство - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают. </li>
+            <li>8. Запрещены подстрекательство и провокация ссор, свар, ругани, наездов и т.п. </li>
+            <li>9. Запрещена пропаганда насилия и фашизма, разжигание межнациональной розни и политические обсуждения.</li>
+            <li>10. Флудить можно, но осторожно :)</li>
         </ul>
+       <h2>Пояснения про флуд</h2>
+       <p>Флуд это разговор ни о чем. Ну почти не о чём. У нас можно обсудить рабочий софт, те же хостинги или IDE, или смежные технологии, или даже какую периферию купить для комфортной работы, или юридические вопросы. Все остальное, вроде какая погода, или кто станет президентом такой-то страны не приветствуется.</p>
+       <p>Темы вроде Joomla плохая, WP хороший сразу долой, за исключением позитивных сравнений или обсуждения в рамках какие функции можно добавить в Joomla чтобы было удобнее работать.</p>
+       <p>Когда в реале несколько человек собираются вместе и треплются - это очень часто разговор ни о чем. И это нормальное явление, способ отдохнуть, мы все это делаем. Поэтому, когда у нас в чате идет флуд - в общем случае это ОК.</p>
+       <p>Другая ситуация: собрались двое и обсуждают интересную тему. И тут приходит третий, и начинает им мешать, пытаясь втирать им какую то левую тему не по делу. Этот третий реально       мешает. Его сперва вежливо а потом и настойчиво попросят уйти. Тоже самое у нас в чате. Флуд мешающий теме - запрещен, ибо он мешает людям. За этим смотрят администраторы. Но стараются вмешиваются только в крайних случаях.</p>
+       <p>И третья ситуация. Двое что то обсуждают, приходит третий встает рядом и начинает орать "аааааааа". Он просто сознательно издевается и мешает. За это можно получить по фейсу. В чате - тоже можно, но только в виде бана.</p>
+       <h2>Админам</h2>
+       <p>Самое главное - это профессиональное отношение. Остальное пишется в качестве "аргумента". К примеру, если ты выносишь предупреждение, то пишешь за что. Прямо ссылаюсь на правила.
+Подобная практика + запрет выступать в роли модератора в споре, в котором ты участвуешь, позволяет исключить недопонимание.</p>
+       <p>На примере.</p>
+       <p>Сообщение -- "Вася вот тебе предупреждение за то, что ты плохо себя вел" -- вызовет лишь еще больше негатива, и споров с модератором на тему к что такое плохо.</p>
+       <p>С другой стороны, холодное сообщение - "Василий. Предупреждение. Нарушения правил чата. Хейтерство." -- моментально остудит пыл.</p>
+       <p>Если не помогает, то человек в праве написать в личку администратору.</p>
+       <p>Если перепалка начинается прямо в чате, то лучшим вариантом будет игнор и просьба к другому админу вынести предупреждение.</p>
+       <p>Если модератор начинает одному и тому же человеку выносить предупреждения, при этом споря с ним, то это будет негатив.</p>
     </div>
-    </body>
+</body>
 </html>
