--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <div class="uk-container">
         <h1>Правила Pro Joomla</h1>
         <ol>
-            <li>1. Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место в этом чате.</li>
-            <li>2. Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
-            <li>3. У нас работают обычные правила вежливости, принятые в обществе. То, что невежливо говорить и делать в публичных местах, запрещено в нашем чате.</li>
-            <li>4. Мы доброжелательны друг к другу и новичкам.</li>
-            <li>5. Новичкам стараемся всячески помогать. На их тему не шутить, не подкалывать, не доказывать свое превосходство и крутизну. Если Вам нечего сказать новичку - не говорите ничего.</li>
-            <li>6. Мы осуждаем воровство программ и их нелицензионное использование. Запрещена публикация линков, связанных с варезом и прочим, что может быть отнесено к нарушению прав разработчиков программ.</li>
-            <li>7. Запрещено хейтерство. Хейтерство - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают. </li>
-            <li>8. Запрещены подстрекательство и провокация ссор, свар, ругани, наездов и т.п. </li>
-            <li>9. Запрещена пропаганда насилия и фашизма, разжигание межнациональной розни и политические обсуждения.</li>
-            <li>10. Флудить можно, но осторожно :)</li>
+            <li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место в этом чате.</li>
+            <li>Основной язык общения чата - русский. Для иностранцев допускается использование английского языка (you can use English if you want).</li>
+            <li>У нас работают обычные правила вежливости, принятые в обществе. То, что невежливо говорить и делать в публичных местах, запрещено в нашем чате.</li>
+            <li>Мы доброжелательны друг к другу и новичкам.</li>
+            <li>Новичкам стараемся всячески помогать. На их тему не шутить, не подкалывать, не доказывать свое превосходство и крутизну. Если Вам нечего сказать новичку - не говорите ничего.</li>
+            <li>Мы осуждаем воровство программ и их нелицензионное использование. Запрещена публикация линков, связанных с варезом и прочим, что может быть отнесено к нарушению прав разработчиков программ.</li>
+            <li>Запрещено хейтерство. Хейтерство - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают. </li>
+            <li>Запрещены подстрекательство и провокация ссор, свар, ругани, наездов и т.п. </li>
+            <li>Запрещена пропаганда насилия и фашизма, разжигание межнациональной розни и политические обсуждения.</li>
+            <li>Флудить можно, но осторожно :)</li>
         </ol>
        <h2>Пояснения про флуд</h2>
        <p>Флуд это разговор ни о чем. Ну почти не о чём. У нас можно обсудить рабочий софт, те же хостинги или IDE, или смежные технологии, или даже какую периферию купить для комфортной работы, или юридические вопросы. Все остальное, вроде какая погода, или кто станет президентом такой-то страны не приветствуется.</p>
