--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <p>Другая ситуация: собрались двое и обсуждают интересную тему. И тут приходит третий, и начинает им мешать, пытаясь втирать им какую то левую тему не по делу. Этот третий реально       мешает. Его сперва вежливо а потом и настойчиво попросят уйти. Тоже самое у нас в чате. Флуд мешающий теме - запрещен, ибо он мешает людям. За этим смотрят администраторы. Но стараются вмешиваются только в крайних случаях.</p>
        <p>И третья ситуация. Двое что то обсуждают, приходит третий встает рядом и начинает орать "аааааааа". Он просто сознательно издевается и мешает. За это можно получить по фейсу. В чате - тоже можно, но только в виде бана.</p>
        <h2>Админам</h2>
-       <p>Самое главное - это профессиональное отношение. Остальное пишется в качестве "аргумента". К примеру, если ты выносишь предупреждение, то пишешь за что. Прямо ссылаюсь на правила.
+       <p>Самое главное - это профессиональное отношение. Остальное пишется в качестве "аргумента". К примеру, если ты выносишь предупреждение, то пишешь за что. Прямо ссылаясь на правила.
 Подобная практика + запрет выступать в роли модератора в споре, в котором ты участвуешь, позволяет исключить недопонимание.</p>
        <p>На примере.</p>
        <p>Сообщение -- "Вася вот тебе предупреждение за то, что ты плохо себя вел" -- вызовет лишь еще больше негатива, и споров с модератором на тему к что такое плохо.</p>
