--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ol>
        <h2>Пояснения про флуд</h2>
        <p>Флуд это разговор ни о чем. Ну почти не о чём. У нас можно обсудить рабочий софт, те же хостинги или IDE, или смежные технологии, или даже какую периферию купить для комфортной работы, или юридические вопросы. Все остальное, вроде какая погода, или кто станет президентом такой-то страны не приветствуется.</p>
-       <p>Темы вроде Joomla плохая, WP хороший сразу долой, за исключением позитивных сравнений или обсуждения в рамках какие функции можно добавить в Joomla чтобы было удобнее работать.</p>
+       <p>Темы вроде Joomla плохая, WP хороший сразу долой, за исключением позитивных сравнений или обсуждения в рамках "какие функции можно добавить в Joomla, чтобы было удобнее работать".</p>
        <p>Когда в реале несколько человек собираются вместе и треплются - это очень часто разговор ни о чем. И это нормальное явление, способ отдохнуть, мы все это делаем. Поэтому, когда у нас в чате идет флуд - в общем случае это ОК.</p>
        <p>Другая ситуация: собрались двое и обсуждают интересную тему. И тут приходит третий, и начинает им мешать, пытаясь втирать им какую то левую тему не по делу. Этот третий реально       мешает. Его сперва вежливо а потом и настойчиво попросят уйти. Тоже самое у нас в чате. Флуд мешающий теме - запрещен, ибо он мешает людям. За этим смотрят администраторы. Но стараются вмешиваются только в крайних случаях.</p>
        <p>И третья ситуация. Двое что то обсуждают, приходит третий встает рядом и начинает орать "аааааааа". Он просто сознательно издевается и мешает. За это можно получить по фейсу. В чате - тоже можно, но только в виде бана.</p>
