--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="uk-container">
 		<h1>Правила Pro Joomla</h1>
-		<h2 id="goals">Цели и атмосфера<h2>
+		<h2 id="goals">Цели и атмосфера</h2>
 		<ul class="uk-list">
 			<li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место рядом с нами.</li>
 			<li>Основной язык общения группы - русский. Для иностранцев допускается использование английского языка.<br>
