--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="uk-container">
 		<h1>Правила Pro Joomla</h1>
 		<h2 id="goals">Цели и атмосфера</h2>
-		<ul class="uk-list">
+		<ul class="uk-list uk-list-bullet">
 			<li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место рядом с нами.</li>
 			<li>Основной язык общения группы - русский. Для иностранцев допускается использование английского языка.<br>
 			You can use English if you want, but it is better to join our Discord server https://discord.gg/hHre3BQ<br>
@@ -32,7 +32,7 @@
 		</ul>
 		<h2 id="prohibited">Запрещено</h2>
 		<ol>
-			<li>Использовать при общении в нецензурные выражения, как открытые, так и завуалированные.</li>
+			<li>1Использовать при общении в нецензурные выражения, как открытые, так и завуалированные.</li>
 			<li>Хейтерство (проявление ненависти) в любой форме.</li>
 			<li>Подстрекательство и провокация ссор, свар, ругани и т.п.</li>
 			<li>Явно или косвенно оскорблять и дискриминировать участников группы и / или сторонних лиц по любому признаку (национальному, половому, религиозному, расовому, возрастному, профессиональному или по любым другим признакам).</li>
@@ -58,8 +58,7 @@
 		</ul>
 		<h2 id="flood">Пояснения про флуд, флейм и оффтоп</h2>
 		<p>Флуд - это разговор ни о чем. Ну почти не о чём.</p>
-		<p>У нас можно обсудить рабочий софт, хостинги, смежные технологии, юридические вопросы, или даже какую периферию купить для комфортной работы.</p>
-		<p>Все остальное, вроде какая погода, или кто станет президентом такой-то страны не приветствуется.</p>
+		<p>У нас можно обсудить рабочий софт, хостинги, смежные технологии, юридические вопросы, или даже какую периферию купить для комфортной работы. Все остальное, вроде какая погода, или кто станет президентом такой-то страны не приветствуется.</p>
 		<p>Темы вроде “Joomla плохая, WP - хороший” находятся под строжайшим запретом, за исключением позитивных сравнений или обсуждения в рамках "какие функции можно добавить в Joomla, чтобы было удобнее работать". Мы всегда рады критике, но только если она обоснованная и аргументированная.</p>
 		<p>Когда несколько человек собираются и общаются - это очень часто разговор ни о чем. И это нормальное явление, способ отдохнуть, мы все это делаем. Поэтому, когда у нас в чате идет подобный  флуд - в общем случае это не нарушает правила.</p>
 		<p>Другая ситуация: двое человек  обсуждают интересную тему. К ним подключается третий, и начинает им мешать, пытаясь навязать свою тему, не относящуюся к теме общения. Этот третий мешает. Поэтому его сперва вежливо, а потом и настойчиво попросят уйти. То же самое у нас в сообществе. Флуд, мешающий обсуждению - запрещен потому, что он мешает людям. За этим смотрят администраторы и модераторы. Но стараются вмешиваться только в крайних случаях.</p>
@@ -79,7 +78,7 @@
 		С другой стороны, холодное сообщение - "Василий. Предупреждение. Нарушения правил. Хейтерство." -- моментально остудит пыл.</p>
 		<p>Если нарушитель не согласен с решением, он вправе написать лично администратору.</p>
 		<h3>Несколько простых правил</h3>
-		<ul class="uk-list">
+		<ul class="uk-list uk-list-bullet">
 			<li>Чужие сообщения ни удалять, ни редактировать, <b>без крайней на то нужды</b>!</li>
 			<li>Если удаляете сообщение, то не пишите об этом прямо в чате, вы можете лично связаться с автором сообщения и объяснить ему причину.</li>
 			<li>Не модерируйте споры, в которых сами участвуете.</li>
