--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</ul>
 		<h2 id="prohibited">Запрещено</h2>
 		<ol>
-			<li>1Использовать при общении в нецензурные выражения, как открытые, так и завуалированные.</li>
+			<li>Использовать при общении в нецензурные выражения, как открытые, так и завуалированные.</li>
 			<li>Хейтерство (проявление ненависти) в любой форме.</li>
 			<li>Подстрекательство и провокация ссор, свар, ругани и т.п.</li>
 			<li>Явно или косвенно оскорблять и дискриминировать участников группы и / или сторонних лиц по любому признаку (национальному, половому, религиозному, расовому, возрастному, профессиональному или по любым другим признакам).</li>
@@ -72,8 +72,7 @@
 		<p>Не стесняйтесь задавать глупые вопросы - все мы когда ничего не понимали.</p>
 		<h2 id="admins">Админам и модераторам</h2>
 		<p>Самое главное - это профессиональное отношение.</p>
-		<p>Если вы выносите предупреждение, то обязательно в спокойной и понятной форме укажите причину, прямо ссылаясь на правила.</p>
-		<p>На примере:<br>
+		<p>Если вы выносите предупреждение, то обязательно в спокойной и понятной форме укажите причину, прямо ссылаясь на правила. Пример:<br>
 		Сообщение -- "Вася, вот тебе предупреждение за то, что ты плохо себя вел" -- вызовет лишь еще больше негатива, и споров с модератором на тему “что такое плохо”.<br>
 		С другой стороны, холодное сообщение - "Василий. Предупреждение. Нарушения правил. Хейтерство." -- моментально остудит пыл.</p>
 		<p>Если нарушитель не согласен с решением, он вправе написать лично администратору.</p>
