--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<ul class="uk-list uk-list-bullet">
 			<li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место рядом с нами.</li>
 			<li>Основной язык общения группы - русский. Для иностранцев допускается использование английского языка.<br>
-			You can use English if you want, but it is better to join our Discord server https://discord.gg/hHre3BQ<br>
-			or our Telegram group https://t.me/joomlatalks.
+			You can use English if you want, but it is better to join our Discord server <a href="https://discord.gg/hHre3BQ" target="_blank" rel="noopener">Joomla for Professionals</a><br>
+			or our Telegram group <a href="https://t.me/joomlatalks" target="_blank" rel="noopener">Joomla Talks</a>.
 			<li>У нас работают обычные правила вежливости, принятые в обществе.</li>
 			<li>Мы доброжелательны друг к другу.</li>
 			<li>У нас приветствуется профессиональное отношение друг другу и не приветствуется токсичность.</li>
