--- a/en/index.html
+++ b/en/index.html
@@ -31,7 +31,7 @@
 		</ul>
 		<h2 id="prohibited">Запрещено</h2>
 		<ol>
-			<li>Использовать при общении в нецензурные выражения, как открытые, так и завуалированные.</li>
+			<li>Чрезмерное употребление нецензурных выражений осуждается и запрещено правилами</li>
 			<li>Хейтерство (проявление ненависти) в любой форме.</li>
 			<li>Подстрекательство и провокация ссор, свар, ругани и т.п.</li>
 			<li>Явно или косвенно оскорблять и дискриминировать участников группы и / или сторонних лиц по любому признаку (национальному, половому, религиозному, расовому, возрастному, профессиональному или по любым другим признакам).</li>
