--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="uk-container">
 		<h1>Правила Pro Joomla</h1>
-		<h2 id="goals">Цели и атмосфера</h2>
+		<h2 id="goals">1. Цели и атмосфера</h2>
 		<ul class="uk-list uk-list-bullet">
 			<li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место рядом с нами.</li>
 			<li>Основной язык общения группы - русский. Для иностранцев допускается использование английского языка.<br>
@@ -27,7 +27,7 @@
 			<li>Администрация группы оставляет за собой право публиковать сообщения рекламного характера.</li>
 			<li>В группе разрешены реферальные ссылки.</li>
 		</ul>
-		<h2 id="prohibited">Запрещено</h2>
+		<h2 id="prohibited">2. Запрещено</h2>
 		<ol>
 			<li>Чрезмерное употребление нецензурных выражений.</li>
 			<li>Хейтерство (проявление ненависти) в любой форме.</li>
@@ -41,7 +41,7 @@
 			Если модератор участвует в дискуссии наравне со всеми, то спорить и дискутировать с ним можно и даже нужно.</li>
 			<li>Спам.</li>
 		</ol>
-		<h2 id="terms">Основные понятия</h2>
+		<h2 id="terms">3. Основные понятия</h2>
 		<ul class="uk-list">
 			<li><strong>Администратор</strong> -  участник, имеющий полный набор прав на управление.</li>
 			<li><strong>Модератор</strong> - назначаемый Администрацией участник, наделенный определенными правам.</li>
@@ -53,7 +53,7 @@
 			<li><strong>Хейтерство</strong> (от англ. hate — ненависть) - чрезмерно злобные высказывания, в которых злоба на первом месте, а смысл, логика и аргументы - где то позади, когда высказываются с целью выплеснуть злобу, не считаясь с тем, что это неприятно окружающим и бьет по тем людям, компаниями или продуктам которые обсуждают.</li>
 			<li><strong>Токсичность</strong> - манера поведения, которой следует избегать. Она выражается в постоянном недовольстве, злобных шутках, негативном посыле и критике. Такое поведение причиняет вред в общении, порождая чувство тревоги, уныния, раздражения и ухудшает психологическое состояние.</li>
 		</ul>
-		<h2 id="flood">Пояснения про флуд, флейм и оффтоп</h2>
+		<h2 id="flood">4. Пояснения про флуд, флейм и оффтоп</h2>
 		<p>Флуд - это разговор ни о чем. Ну почти не о чём.</p>
 		<p>У нас можно обсудить рабочий софт, хостинги, смежные технологии, юридические вопросы, или даже какую периферию купить для комфортной работы. Все остальное, вроде какая погода, или кто станет президентом такой-то страны не приветствуется.</p>
 		<p>Темы вроде “Joomla плохая, WP - хороший” находятся под строжайшим запретом, за исключением позитивных сравнений или обсуждения в рамках "какие функции можно добавить в Joomla, чтобы было удобнее работать". Мы всегда рады критике, но только если она обоснованная и аргументированная.</p>
