--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="uk-container">
 		<h1>Правила Pro Joomla</h1>
 		<h2 id="goals">1. Цели и атмосфера</h2>
-		<ul class="uk-list uk-list-bullet">
+		<ol class="uk-list uk-list-bullet">
 			<li>Мы верим в развитие Joomla и прикладываем личные усилия для этого. Всем, кто не разделяет наших убеждений - не место рядом с нами.</li>
 			<li>Основной язык общения группы - русский. Для иностранцев допускается использование английского языка.<br>
 			You can use English if you want, but it is better to join our Discord server <a href="https://discord.gg/hHre3BQ" target="_blank" rel="noopener">Joomla for Professionals</a> or our Telegram group <a href="https://t.me/joomlatalks" target="_blank" rel="noopener">Joomla for Professionals</a>.
